# ci-test

./: .gitignore  Makefile  ocamlfind  test.ml  test.opam  xmltest
.github/workflows/: main.yml
test/: test.saty
